gtk4: Fix actionbar spacing
Based on upstream commit [1], also change the spacing to 6px as it
seems more consistent with rest of the theme.

[1] https://gitlab.gnome.org/GNOME/gtk/-/commit/435a8f63377b518bb64902c06d3f9984107981cb

--- a/common/gtk-4.0/sass/_common.scss
+++ b/common/gtk-4.0/sass/_common.scss
@@ -3151,9 +3151,12 @@ frame {
 
 actionbar > revealer > box {
   padding: 5px;
-  border-spacing: 5px;
   border-top: 1px solid $borders_color;
   background-color: darken($bg_color, 3%);
+
+  &, > box.start, > box.end {
+    border-spacing: 6px;
+  }
 }
 
 scrolledwindow {
